tests/NormalTests/paczka1/fuzzy1/89824740.err
Error in line 8: F16 S896 73,7
Error in line 20: LoJM1MaSPk S896 37,4
Error in line 28: A369 S896 26,4
Error in line 17: 1JUn2NWS8Ja S896 15,8
Error in line 33: 9uZO S640 79,1
